получение информации о самом себе по токену

--- a/docker/messenger/Dockerfile
+++ b/docker/messenger/Dockerfile
@@ -3,6 +3,8 @@ FROM ubuntu:22.04
 WORKDIR /srv
 EXPOSE 3000
 
-RUN apt-get update && apt-get install -y nodejs && update-ca-certificates
+COPY . /messenger/package.json
+COPY . /messenger/package-lock.json
 
+RUN apt-get update && apt-get install -y nodejs npm && npm i && update-ca-certificates
 CMD ["node", "index.js"]
