--- a/messenger/package.json
+++ b/messenger/package.json
@@ -1,5 +1,5 @@
 {
-  "type": "commonjs",
+  "type": "module",
   "name": "messenger",
   "version": "1.0.0",
   "description": "",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4"
   }
